--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
    <div class="canvasHolder">
       <canvas id="myCanvas" width="1200" height="900"></canvas>
       <canvas id="myChart" width="600" height="600"></canvas>
+      <div class="overlay" hidden="hidden">
+        <div class="overlaytxt">Overlay</div>
+      </div>
 
         <video id="camVideo" style="visibility:hidden;"></video>
         <canvas id="camCanvas" style="visibility:hidden;"></canvas>
