--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
    <div class="canvasHolder">
       <canvas id="myCanvas" width="1200" height="900"></canvas>
       <canvas id="myChart" width="600" height="600"></canvas>
-      <div class="overlay" hidden="hidden">
+      <div id="overlay">
         <div class="overlaytxt">Overlay</div>
       </div>
 
