Works now! Yipeee

--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
   
   <canvas hidden id="music" width="700"></canvas>          
   <div id = "musicNotation"></div> 
+  <div class="overlay" id="overlay">
+    <div class="overlaytxt" id="overlaytxt"></div>
+  </div>
    <div class="canvasHolder">
       <canvas id="myCanvas" width="1200" height="900"></canvas>
       <canvas id="myChart" width="600" height="600"></canvas>
-      <div id="overlay">
-        <div class="overlaytxt">Overlay</div>
-      </div>
 
         <video id="camVideo" style="visibility:hidden;"></video>
         <canvas id="camCanvas" style="visibility:hidden;"></canvas>
